hphp/hack/test/typecheck/constraints/where_fail_1.php.like_types.exp
File "where_fail_1.php", line 14, characters 28-29:
Invalid argument (Typing[4110])
File "where_fail_1.php", line 10, characters 38-38:
Expected ~[unresolved] because it is an unenforceable type
File "where_fail_1.php", line 13, characters 24-27:
But got Base
